Correct alignment of IM component

--- a/app/components/InstantMessage/instantMessage.scss
+++ b/app/components/InstantMessage/instantMessage.scss
@@ -14,9 +14,9 @@ $clr-im-bg: rgb(29, 30, 38);
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   color: white;
   background: rgba(
     red($clr-im-bg),
@@ -58,7 +58,7 @@ $clr-im-bg: rgb(29, 30, 38);
   &__textarea {
     width: 100%;
     height: 100%;
-    min-height: 50vh;
+    min-height: 40vh;
     border: none;
     border-radius: 4px;
     padding: msRem(3);
@@ -67,7 +67,7 @@ $clr-im-bg: rgb(29, 30, 38);
     color: lighten($clr-text, 35%);
 
     @media #{$mq-tablet-up} {
-      min-height: 40vh;
+      min-height: 50vh;
     }
   }
 
